# block-parliament-rust

./: .gitignore  Cargo.toml  config.toml.example  rustfmt.toml
crates/bp-web/: Cargo.toml  Makefile  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
crates/bp-web/src/: app.rs  config.rs  lib.rs  main.rs
crates/bp-web/src/api/: http.rs  jito.rs  mod.rs  sfdp.rs  solana_rpc.rs  stakewiz.rs
crates/bp-web/src/components/: metrics.rs  mod.rs  owl_mark.rs  section.rs
crates/bp-web/src/pages/: home.rs  mod.rs  security.rs
crates/bp-web/style/: main.css  output.css  tailwind.css
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs
crates/validator-accounting/: Cargo.toml  config.toml.example
crates/validator-accounting/src/: addresses.rs  cache.rs  config.rs  dune.rs  expenses.rs  jito.rs  leader_fees.rs  main.rs  notion.rs  prices.rs  reports.rs  transactions.rs  vote_costs.rs
crates/validator-finances/: Cargo.toml
crates/validator-finances/src/: cache.rs  config.rs  dune.rs  expenses.rs  jito.rs  leader_fees.rs  main.rs  prices.rs  reports.rs  transactions.rs  vote_costs.rs
src/: addresses.rs  cache.rs  config.rs  constants.rs  dune.rs  jito.rs  leader_fees.rs  main.rs  notion.rs  prices.rs  reports.rs  transactions.rs  vote_costs.rs
