[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides - too noisy for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Solana
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for price API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV output
csv = "1"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config file parsing
toml = "0.8"

# Pretty printing
tabled = "0.17"

# SQLite with compile-time checked queries
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
