[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Solana
solana-client = "3.1.7"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.7"
solana-commitment-config = "3.1.0"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP client for price API
reqwest = { version = "0.13.1", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

# CSV output
csv = "1.4.0"

# CLI arguments
clap = { version = "4.5.54", features = ["derive"] }

# Error handling
anyhow = "1.0.100"

# Config file parsing
toml = "0.9.11"

# SQLite with compile-time checked queries
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
