[package]
name = "bp-web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "bp-web"
path = "src/main.rs"

[dependencies]
shared.workspace = true
leptos.workspace = true
leptos_router.workspace = true
gloo-net.workspace = true
# gloo-timers not needed - using web_sys directly for setInterval
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
