[package]
name = "validator-accounting"
version.workspace = true
edition.workspace = true
description = "Accounting and financial tracking for Block Parliament Solana validator"

[lints]
workspace = true

[dependencies]
# Solana
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-commitment-config.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client for price API
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time handling
chrono.workspace = true

# CSV output
csv.workspace = true

# CLI arguments
clap.workspace = true

# Error handling
anyhow.workspace = true

# Config file parsing
toml.workspace = true

# SQLite with compile-time checked queries
sqlx.workspace = true
